syntax = "proto3";

import "result.proto";



package api;
option go_package = "./;api";

message SyncReq {

   int64 uid = 1;
   int32 appId = 2;
   int32 channel = 3;
   // 客户端本地最大同步位点
   int64 localSyncPos = 4;
}

message SyncResp {
   repeated SyncMember members = 1;
   repeated string messages = 2;
   bool hasMore = 3;
}

message SyncMember {
   int64 syncPos = 1;
   int64 msgId = 2;
}

service SyncService {
   rpc Sync (SyncReq) returns (Result) {}
}


